--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,6 +85,13 @@
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
+			<li>
+				<a href="#">Research</a>
+				<ul class="dl-submenu">
+					<li><a href="{{ site.url }}/research/">All Posts</a></li>
+				</ul>
+			</li>
+
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
