Update nav.html to add posts.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -86,9 +86,9 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">Research</a>
+				<a href="#">Post</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/research/">All Posts</a></li>
+					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 				</ul>
 			</li>
 
