--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -86,10 +86,8 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">Post</a>
-				<ul class="dl-submenu">
+				<a href="#">Research</a>
 					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-				</ul>
 			</li>
 
 			{% for link in site.data.navigation %}
