--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,10 +85,7 @@
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
-			<li>
-				<a href="#">Research</a>
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-			</li>
+					<li><a href="{{ site.url }}/posts/">Research</a></li>
 
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
