Replace Research with Posts.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@ layout: compress
                          Projects
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Research
+                         Posts
                          </a>
                  </h3>
             </div>
